--- a/app_pagos/src/app/components/login/login.component.html
+++ b/app_pagos/src/app/components/login/login.component.html
@@ -25,11 +25,11 @@
       </button>
     </div>
     <!-- Opción de Olvidaste tu Contraseña -->
-    <div class="text-center mt-2">
+    <!-- <div class="text-center mt-2">
       <a routerLink="/forgot-password" class="text-sm text-blue-500 hover:text-blue-700 transition-colors duration-200">
         ¿Olvidaste tu contraseña?
       </a>
-    </div>
+    </div> -->
     <!-- Opción de Registro -->
     <div class="text-center mt-4">
       <span class="text-gray-600 dark:text-gray-400 text-sm">
