--- a/app_pagos/src/app/views/payment-dashboard/payment-dashboard.component.html
+++ b/app_pagos/src/app/views/payment-dashboard/payment-dashboard.component.html
@@ -2,7 +2,7 @@
   <!-- payment-dashboard.component.html -->
   <div class="container mx-auto p-6">
     <div class="text-center mb-6">
-      <h1 class="text-2xl font-bold">Mi Cuenta</h1>
+      <h1 class="text-2xl font-bold">Resumen Cuenta</h1>
       <p class="text-gray-600">Aquí puedes ver tu saldo y transacciones</p>
     </div>
 
