--- a/app_pagos/src/app/layout/admin-dashboard/admin-dashboard.component.html
+++ b/app_pagos/src/app/layout/admin-dashboard/admin-dashboard.component.html
@@ -1,6 +1,6 @@
 <!-- dashboard.component.html -->
 <app-navbar></app-navbar>
-<div>
+<div class="pt-20">
   <div class="flex">
     <app-admin-slidebar></app-admin-slidebar>
     <div class="flex-1 p-6">
