Refactor HTML code to add top padding in clean-view, default-view, and admin-dashboard components

--- a/app_pagos/src/app/views/payment-dashboard/payment-dashboard.component.html
+++ b/app_pagos/src/app/views/payment-dashboard/payment-dashboard.component.html
@@ -5,11 +5,10 @@
       <h1 class="text-2xl font-bold">Resumen Cuenta</h1>
       <p class="text-gray-600">Aquí puedes ver tu saldo y transacciones</p>
     </div>
-
     <!-- Saldo actual -->
     <div class="bg-blue-100 p-6 rounded-lg mb-6">
       <h2 class="text-2xl font-semibold text-blue-600">Saldo Actual</h2>
-      <p class="text-3xl font-bold text-blue-800">{{ currentBalance | currency:'GTQ' }}</p>
+      <p class="text-3xl font-bold text-blue-800">{{ cuenta.saldo | currency:'GTQ' }}</p>
     </div>
 
     <!-- Transacciones -->
