Refactor HTML code to add top padding in clean-view, default-view, and admin-dashboard components

--- a/app_pagos/src/app/views/payment-dashboard/payment-dashboard.component.html
+++ b/app_pagos/src/app/views/payment-dashboard/payment-dashboard.component.html
@@ -26,11 +26,11 @@
           </thead>
           <tbody>
             <tr *ngFor="let transaction of transactions" class="border-b">
-              <td class="px-6 py-4">{{ transaction.date }}</td>
-              <td class="px-6 py-4">{{ transaction.description }}</td>
-              <td class="px-6 py-4">{{ transaction.type }}</td>
-              <td class="px-6 py-4 text-right" [ngClass]="transaction.amount < 0 ? 'text-red-600' : 'text-green-600'">
-                {{ transaction.amount | currency:'GTQ' }}
+              <td class="px-6 py-4">{{ formatFecha(transaction.create_at) }}</td>
+              <td class="px-6 py-4">{{ transaction.descripcion }}</td>
+              <td class="px-6 py-4">{{ getEquivalenteTipoTransaccion(transaction.id_tipo_transaccion) }}</td>
+              <td class="px-6 py-4 text-right" [ngClass]="transaction.monto < 0 ? 'text-red-600' : 'text-green-600'">
+                {{ transaction.monto | currency:'GTQ' }}
               </td>
             </tr>
           </tbody>
@@ -40,22 +40,28 @@
       <!-- Botones de paginación -->
       <div class="flex justify-center mt-4">
         <!-- Botón Anterior -->
-        <a href="#" class="flex items-center justify-center px-3 h-8 me-3 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
-           [class.opacity-50]="currentPage === 1" [class.pointer-events-none]="currentPage === 1"
-           (click)="previousPage()">
-          <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5H1m0 0 4 4M1 5l4-4"/>
+        <a href="#"
+          class="flex items-center justify-center px-3 h-8 me-3 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+          [class.opacity-50]="currentPage === 1" [class.pointer-events-none]="currentPage === 1"
+          (click)="previousPage()">
+          <svg class="w-3.5 h-3.5 me-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+            viewBox="0 0 14 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M13 5H1m0 0 4 4M1 5l4-4" />
           </svg>
           Anterior
         </a>
 
         <!-- Botón Siguiente -->
-        <a href="#" class="flex items-center justify-center px-3 h-8 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
-           [class.opacity-50]="currentPage === totalPages" [class.pointer-events-none]="currentPage === totalPages"
-           (click)="nextPage()">
+        <a href="#"
+          class="flex items-center justify-center px-3 h-8 text-sm font-medium text-gray-500 bg-white border border-gray-300 rounded-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
+          [class.opacity-50]="currentPage === totalPages" [class.pointer-events-none]="currentPage === totalPages"
+          (click)="nextPage()">
           Siguiente
-          <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+          <svg class="w-3.5 h-3.5 ms-2 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none"
+            viewBox="0 0 14 10">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M1 5h12m0 0L9 1m4 4L9 9" />
           </svg>
         </a>
       </div>
