--- a/app_pagos/src/app/components/navbar/navbar.component.html
+++ b/app_pagos/src/app/components/navbar/navbar.component.html
@@ -48,7 +48,7 @@
             <a routerLink="/dashboard"
               class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Dashboard</a>
           </li>
-          <li><a routerLink="/my-information"
+          <li><a routerLink="/mi-perfil"
               class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">
               Configuración
             </a>
