--- a/app_pagos/src/app/components/admin-slidebar/admin-slidebar.component.html
+++ b/app_pagos/src/app/components/admin-slidebar/admin-slidebar.component.html
@@ -9,13 +9,13 @@
         <a routerLink="/dashboard/empresas" class="text-gray-300 hover:bg-gray-600 hover:text-white block py-2 px-4">Empresas</a>
       </li>
       <li>
-        <a routerLink="/dashboard/tokens" class="text-gray-300 hover:bg-gray-600 hover:text-white block py-2 px-4">Tokens Bancarios</a>
-      </li>
-      <li>
         <a routerLink="/dashboard/usuarios" class="text-gray-300 hover:bg-gray-600 hover:text-white block py-2 px-4">Usuarios</a>
       </li>
       <li>
         <a routerLink="/dashboard/admins" class="text-gray-300 hover:bg-gray-600 hover:text-white block py-2 px-4">Administradores</a>
+      </li>
+      <li>
+        <a routerLink="/dashboard/admins" class="text-gray-300 hover:bg-gray-600 hover:text-white block py-2 px-4">Reportes</a>
       </li>
     </ul>
   </nav>
