Refactor HTML code to add "My Account" component and functionality

--- a/app_pagos/src/app/components/admin-slidebar/admin-slidebar.component.html
+++ b/app_pagos/src/app/components/admin-slidebar/admin-slidebar.component.html
@@ -15,7 +15,7 @@
         <a routerLink="/dashboard/admins" class="text-gray-300 hover:bg-gray-600 hover:text-white block py-2 px-4">Administradores</a>
       </li>
       <li>
-        <a routerLink="/dashboard/admins" class="text-gray-300 hover:bg-gray-600 hover:text-white block py-2 px-4">Reportes</a>
+        <a routerLink="/dashboard/reportes" class="text-gray-300 hover:bg-gray-600 hover:text-white block py-2 px-4">Reportes</a>
       </li>
     </ul>
   </nav>
